Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # 'Malta'\n"
    ]
   },
   {
