--- a/index.ipynb
+++ b/index.ipynb
@@ -217,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # 'Thailand'"
    ]
   },
   {
