Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,8 +316,7 @@
     " 'Italy',\n",
     " 'Canada',\n",
     " 'South Korea', \n",
-    " 'Malta', \n",
-    " 'Thailand']\n",
+    " 'Malta', ]\n",
     "countries.pop() # 'Thailand'\n",
     "countries\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
